editorial: update events

--- a/src/components/EventTeaser.astro
+++ b/src/components/EventTeaser.astro
@@ -1,6 +1,6 @@
 <div class="event-teaser">
   <a href="https://pretix.eu/correlaid/correllab-info" target="_blank"
-    >Online-Infoveranstaltung: 08.07.25</a
+    >Online-Infoveranstaltung im Juli & August</a
   >
 </div>
 
