feat: remove banner

--- a/src/compositions/Header.astro
+++ b/src/compositions/Header.astro
@@ -11,9 +11,11 @@ import CorrelLabLogoWide from '@assets/branding/lab/Main/CorrelLab horizontal.sv
       <CorrelLabLogoWide height={'36'} alt="CorrelLab Logo" />
     </a>
   </div>
-  <div class="desktop">
+  {
+    /* <div class="desktop">
     <EventTeaser />
-  </div>
+  </div> */
+  }
   {/* <NavigationMain /> */}
   {/* <NavigationCompact /> */}
   <div class="corner">
