--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -38,8 +38,8 @@ import phasen from '@data/phasen.json';
 
     <Fragment slot="footer">
       <div class="flex cols wrap gap-2 align-start">
-        <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs 1: Daten verstehen</LabLinkButton>
-        <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs 2: Daten nutzen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-verstehen/">Kurs: Daten verstehen</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs-daten-nutzen/">Kurs: Daten nutzen</LabLinkButton>
       </div>
     </Fragment>
   </CardPlain>
