--- a/src/pages/kurse/kurs-daten-verstehen.astro
+++ b/src/pages/kurse/kurs-daten-verstehen.astro
@@ -1,5 +1,5 @@
 ---
-import { getImage, Image } from 'astro:assets';
+import { getImage, Image, Picture } from 'astro:assets';
 
 import Blockquote from '@/components/Blockquote.astro';
 import CardPlain from '@components/cards/CardPlain.astro';
@@ -16,7 +16,7 @@ const CarouselBackground = await getImage({
   format: 'webp',
 });
 
-import FlyerKurs from '@assets/images/correllab-flyer-kurs1.png';
+import FlyerKurs from '@assets/images/correllab-flyer-kurs-daten-verstehen.png';
 import * as KostenContent from '@content/landing/kosten.md';
 import phasen from '@data/phasen.json';
 import quotes from '@data/quotes.json';
@@ -100,6 +100,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
           src={FlyerKurs}
           alt="Flyer Kurs: Daten verstehen"
           widths={[600, 900, 1200, 1600]}
+          formats={['webp', 'avif']}
         /></a
       >
       <figcaption class="contained">
@@ -110,7 +111,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
         </div>
         <details>
           <summary>Die Themen in Tabellenform</summary>
-          <div class="subsection prose cap pt-4" style="color: var(--color-gray-800)">
+          <div class="subsection prose cap pt-4">
             <CardPlain>
               <Fragment slot="card-title">Die Themen</Fragment>
               <table slot="content" id="kurs-timeline">
@@ -153,4 +154,8 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </div>
 </KursLayout>
 
-<style></style>
+<style>
+  .subsection {
+    color: var(--color-gray-800);
+  }
+</style>
