--- a/src/pages/kurse/kurs-daten-nutzen.astro
+++ b/src/pages/kurse/kurs-daten-nutzen.astro
@@ -145,7 +145,7 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
     </LabLinkButton>
   </section>
 
-  <PeopleSection people={[people.zoe, people.antje, people.jonas]} />
+  <PeopleSection people={[people.zoe, people.nora]} />
 
   <Banner slot="banner" />
   <div class="flex cols center gap-2 pad-8 wrap" slot="footer-links">
