--- a/src/pages/kurse/kurs-daten-verstehen.astro
+++ b/src/pages/kurse/kurs-daten-verstehen.astro
@@ -144,7 +144,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
     </LabLinkButton>
   </section>
 
-  <PeopleSection people={[people.zoe, people.antje, people.emma]} />
+  <PeopleSection people={[people.zoe, people.nora, people.lisa]} />
 
   <Banner slot="banner" />
 
