Update description of Praxisphase participation

--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -39,7 +39,7 @@ import stages from '@data/praxisphase.json';
   <section class="prose">
     <h3 class="text-center">So seid ihr dabei</h3>
     <p>
-      Für die Praxisphase haben wir in der ersten Kohorte nur zehn Plätze. Die Kosten der
+      Die Plätze in der Praxisphase sind auf maximal zehn Organisationen pro Kohorte begrenzt. Die Kosten der
       Praxisphase können durch eine externe Förderung oder eines unserer Stipendien gedeckt werden.
     </p>
     <p>
