Update title and body text in Banner.astro

--- a/src/compositions/Banner.astro
+++ b/src/compositions/Banner.astro
@@ -11,17 +11,11 @@ import MailIcon from '@assets/svg/icons/mail.svg';
     <CorrelLabLogoMin class="logo-mobile" width={'24'} color="var(--color-lab-muted)" />
   </div>
   <div class="prose content-box narrow">
-    <h2 class="light"><slot name="title">Fragen zum Stipendium?</slot></h2>
+    <h2 class="light"><slot name="title">Ihr habt Fragen?</slot></h2>
     <div class="body">
       <slot name="body">
         <p class="light">
-          Ihr habt Fragen, z. B. zum Stipendienticket oder wollt direkt im CorrelLAB durchstarten?<br
-          />
-          Schreibt uns einfach eine kurze <a href="mailto:lab@correlaid.org?subject=CorrelLAB"
-            >Nachricht</a
-          > oder kommt in die <a href="https://zeeg.me/correlaid/correllab?month=2025-10"
-            >Datensprechstunde</a
-          >, wir freuen uns auf euch!
+          Kontaktiert uns gerne für ein unverbindliches Erstgespräch.
         </p>
       </slot>
     </div>
