reintroduce event annon

--- a/src/components/EventTeaser.astro
+++ b/src/components/EventTeaser.astro
@@ -1,6 +1,6 @@
 <div class="event-teaser">
   <a href="https://pretix.eu/correlaid/correllab-info" target="_blank"
-    >Online-Infoveranstaltungen im Juli & August</a
+    >Online-Infoveranstaltung am 19.1.</a
   >
 </div>
 
@@ -9,6 +9,7 @@
   a {
     font-size: 0.9rem;
     line-height: 1;
+    text-decoration: underline;
   }
 
   .event-teaser {
